<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpinnerActivity"
    android:orientation="vertical">
    
    <TextView
        android:text="@string/txt_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="24sp"/>
    
    <TextView
        android:text="@string/txt_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spnNomes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/txt_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/spnCidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textSize="24sp"/>
    
    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar"
        android:layout_marginTop="20sp"
        android:textSize="24sp"/>


</LinearLayout>